remove margin from left side of navs since it's no longer being set. remove webkit-overflow-scrolling from modal for now
BS3 commit 5967ef64a3b91b76b6e1ac6e7e61c8306a954f4a and
522004e67ae72d48ae6a2aadc304cfdb2af4e92e

--- a/docs/assets/css/bootstrap.css
+++ b/docs/assets/css/bootstrap.css
@@ -2531,7 +2531,6 @@ button.close {
 .nav {
   padding-left: 0;
   margin-bottom: 0;
-  margin-left: 0;
   list-style: none;
 }
 
@@ -3471,7 +3470,6 @@ button.close {
   display: none;
   overflow: auto;
   overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
 }
 
 .modal.fade {
